# harmonics

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  MANIFEST.yml  Makefile  README.md  RESULTS.md  VISUAL_ONTOLOGY_PROMPT.md  animate_genesis.py  animate_mediants.py  ascii  bifurcation_sweep.py  colony.html  driven_stribeck.py  index.html  lattice_sweep.py  pyproject.toml  stribeck_lattice.py
.claude/: settings.json
.github/scripts/: check_links.py
.github/workflows/: build-assets.yml  framework-tests.yml  notify-site.yml  pages.yml
.ket/: config.yaml  log  manifest
docs/: a_s_proof.html  a_s_proof_graph.json  claim-chain-views.html  claim-chain.html  cmb-s4.html  collatz.html  dag.html  derivation-graph.json  derivations.html  glossary.html  index.html  ket-graph.json  style.css  view-labels.json  walkthrough.html
engine/: README.md
engine/derived/: circle.md  dimension.md  duty.md  farey.md  klein.md  (+2 more)
models/: APPLICATIONS_BY_CONCERN.md  ENGINEERING_SUMMARY.md  README.md  applied_hypotheses.md  atmospheric.md  damping_perturbations.md  farey_orbitals.md  look_ahead.md  metronome_staircase.md  mobius_resonator.md  round_robin_and_gearbox.md  tuning_machines.md
patches/: 201-harmonics-progress.patch  intersections-harmonics-progress.patch  proslambenomenos-harmonics-progress.patch  proslambenomenos-site-add-harmonics.patch
scripts/: build_claim_chain.py  build_derivation_graph.py  ket.py
seed/: Cargo.toml  STAR_SUBSTRATE.md
seed/src/: main.rs  schemas.rs
sync_cost/: FRAMEWORK.md  MINIMUM_SELF_PREDICTING_UNIVERSE.md  PROOFREADER_RESPONSE.md
(+499 files in other folders)
