[package]
name = "harmonics-seed"
version = "0.1.0"
edition = "2021"
description = "Seed ket DAG with open questions and harmonics claims via canon.d"

[dependencies]
canon_d = { path = "../../canon.d" }
ket-cas = { git = "https://github.com/nickjoven/ket.git" }
ket-dag = { git = "https://github.com/nickjoven/ket.git" }
serde_json = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

[patch."https://github.com/nickjoven/ket.git"]
ket-cas = { path = "../ket/ket-cas" }
ket-dag = { path = "../ket/ket-dag" }
